simple page landing

--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -6938,7 +6938,7 @@ License - nucleoapp.com/license/
 }
 
 .section-dark {
-  background-color: #0b1011;
+  background-color: #114488;
 }
 
 .section-image,
